<resources>
    <string name="app_name">Vision</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up">or Sign Up!</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="vision">VISION</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="log_out">Log Out</string>
    <string name="admin_only">Admin Only</string>
    <string name="date">Date</string>
    <string name="type_password_again">Type password again</string>
    <string name="create_a_unique_password">Create a unique password</string>
    <string name="create_a_unique_username">Create a unique username</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="action_settings">action</string>
    <string name="login_page">Login Page</string>
    <string name="logout">Log Out</string>
    <string name="current_goals">Current Goals</string>
    <string name="home_page">Home</string>
    <string name="your_goals">Your Goals</string>
    <string name="your_progress">Your Progress</string>
    <string name="user_delete_message">Click button below to view list of users (cannot undo once user is deleted from database)</string>
    <string name="admin_zone">Admin Zone</string>
    <string name="user_list_btn">User List</string>
    <string name="deadline">Deadline</string>
    <string name="title">Title</string>
</resources>